--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
+    "types": [
+            "node"      ],
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
